--- a/reservation.html
+++ b/reservation.html
@@ -201,6 +201,18 @@
         </div>
       </div>
     </div>
+
+    <!-- Tisch-Uebersicht Modal -->
+    <div id="tischUebersichtModal" class="modal hidden">
+      <div class="modal-backdrop"></div>
+      <div class="modal-content modal-tisch-uebersicht">
+        <span class="modal-close" id="tischUebersichtClose">&times;</span>
+        <h3>Tischübersicht - Reservierung</h3>
+        <div class="iframe-container">
+          <iframe id="tischUebersichtIframe" src="" style="width: 100%; height: 600px; border: none;"></iframe>
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- Connection Status -->
