feat: Add clean names functionality and enhance reservation styles

--- a/reservation.html
+++ b/reservation.html
@@ -112,6 +112,7 @@
         <textarea id="newNamesTextarea" placeholder="pro Zeile ein Eintrag"></textarea>
 
         <div class="modal-buttons">
+          <button id="cleanNamesBtn" class="btn-secondary">Bereinigen</button>
           <button id="importNamesBtn" class="btn-confirm">Namen hinzufügen</button>
           <button id="addNamesCancel" class="btn-cancel">Abbrechen</button>
         </div>
