Add name format parser and tests for birthdate detection
- Implemented NamesBirthdateParser class to parse names with optional birthdate information.
- Added methods to handle different name formats (firstname-lastname and lastname-firstname).
- Created test scripts (test-isolated-format.php and test-name-format.php) to validate the functionality of the parser with various input cases, including edge cases and special formats.
- Included statistics tracking for detected birthdates, ages, and formats.

--- a/reservation.html
+++ b/reservation.html
@@ -1169,6 +1169,49 @@
 
     console.log('✅ Guide row pulsing animation initialized (Enhanced for BF symbols)');
     console.log('🧪 Test with: testGuideAnimation(), debugGuideRows(), or debugBFCells()');
+
+    // Namen+ Button Event Handler - Weiterleitung zur neuen Import-Seite
+    document.addEventListener('DOMContentLoaded', function () {
+      const addNamesBtn = document.getElementById('addNamesBtn');
+      if (addNamesBtn) {
+        addNamesBtn.addEventListener('click', function (e) {
+          e.preventDefault();
+
+          // Hole die aktuelle Reservierungs-ID aus der URL oder anderen Quellen
+          const urlParams = new URLSearchParams(window.location.search);
+          const resId = urlParams.get('id') || getReservationId();
+
+          if (resId) {
+            // Weiterleitung zur neuen Namen-Import-Seite
+            window.location.href = `namen-import.php?res_id=${resId}`;
+          } else {
+            console.error('Keine Reservierungs-ID gefunden');
+            alert('Fehler: Keine Reservierungs-ID gefunden');
+          }
+        });
+
+        console.log('✅ Namen+ Button mit neuer Import-Seite verbunden');
+      } else {
+        console.warn('⚠️ Namen+ Button nicht gefunden');
+      }
+    });
+
+    // Hilfsfunktion um Reservierungs-ID zu ermitteln
+    function getReservationId() {
+      // Versuche verschiedene Quellen für die ID
+      const urlParams = new URLSearchParams(window.location.search);
+      let resId = urlParams.get('id');
+
+      if (!resId && window.currentReservationData) {
+        resId = window.currentReservationData.id;
+      }
+
+      if (!resId && window.reservationData) {
+        resId = window.reservationData.id;
+      }
+
+      return resId;
+    }
   </script>
 </body>
 
