--- a/reservation.html
+++ b/reservation.html
@@ -246,11 +246,88 @@
     <!-- Name Correction Modal -->
     <div id="nameCorrectionModal" class="modal hidden">
       <div class="modal-backdrop"></div>
-      <div class="modal-content">
+      <div class="modal-content" style="max-width: 800px; width: 90vw;">
         <span class="modal-close" id="nameCorrectionModalClose">&times;</span>
         <h3>Namen-Korrektur vorgeschlagen</h3>
         <p>Es wurde erkannt, dass in einem Namensfeld mehrere Namen stehen. Möchten Sie diese aufteilen?</p>
 
+        <!-- NEUE OPTION: Name anzeigen mit Leerzeichen-Indikator -->
+        <div id="nameDisplaySection"
+          style="margin: 20px 0; padding: 20px; background: #f8f9fa; border-radius: 8px; border: 1px solid #dee2e6;">
+          <h4 style="margin: 0 0 15px 0; color: #495057;">Interaktive Namen-Trennung</h4>
+
+          <!-- Originalname mit Trennungsvisualisierung -->
+          <div style="margin-bottom: 15px;">
+            <label style="font-size: 0.9rem; color: #495057; margin-bottom: 5px; display: block;">Originalname:</label>
+            <div id="originalNameDisplay"
+              style="font-family: monospace; font-size: 18px; padding: 12px; background: white; border: 2px solid #007bff; border-radius: 6px; min-height: 40px; line-height: 1.4;">
+              <!-- Name mit farblicher Trennung wird hier angezeigt -->
+            </div>
+          </div>
+
+          <!-- Trennposition Slider -->
+          <div style="margin-bottom: 15px;">
+            <label for="splitPositionSlider"
+              style="font-size: 0.9rem; color: #495057; margin-bottom: 5px; display: block;">
+              Trennposition: <span id="splitPositionText">Bei Leerzeichen</span>
+            </label>
+            <input type="range" id="splitPositionSlider" min="0" max="10" value="0" step="1"
+              style="width: 100%; height: 8px; background: #ddd; border-radius: 5px; outline: none;">
+            <div
+              style="display: flex; justify-content: space-between; font-size: 0.8rem; color: #6c757d; margin-top: 5px;">
+              <span>Anfang</span>
+              <span>Leerzeichen</span>
+              <span>Ende</span>
+            </div>
+          </div>
+
+          <!-- Vorschau der Aufteilung -->
+          <div style="margin-bottom: 15px;">
+            <h5 style="margin: 0 0 10px 0;">Vorschau der Aufteilung:</h5>
+            <div style="display: flex; gap: 8px; align-items: center;">
+              <div style="flex: 1;">
+                <label style="font-size: 0.9rem; color: #495057;">Nachname:</label>
+                <input type="text" id="previewNachname" readonly
+                  style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; background: #f8f9fa; font-weight: bold;">
+              </div>
+              <button id="swapNamesBtn"
+                style="padding: 6px 4px; background: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 12px; width: 24px; max-width: 24px; min-width: 24px; flex-shrink: 0; text-align: center;"
+                title="Vor- und Nachname tauschen">
+                ⇄
+              </button>
+              <div style="flex: 1;">
+                <label style="font-size: 0.9rem; color: #495057;">Vorname:</label>
+                <input type="text" id="previewVorname" readonly
+                  style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px; background: #f8f9fa; font-weight: bold;">
+              </div>
+            </div>
+          </div>
+
+          <!-- Sonderzeichen-Optionen -->
+          <div
+            style="margin-bottom: 15px; padding: 10px; background: #ffffff; border: 1px solid #e9ecef; border-radius: 4px;">
+            <h6 style="margin: 0 0 8px 0; color: #495057;">Bereinigungsoptionen:</h6>
+            <label style="display: block; margin-bottom: 6px; cursor: pointer;">
+              <input type="checkbox" id="removeLongSpaces" checked style="margin-right: 8px;">
+              Mehrfache Leerzeichen durch einzelnes ersetzen
+            </label>
+            <label style="display: block; margin-bottom: 6px; cursor: pointer;">
+              <input type="checkbox" id="removeSpecialChars" checked style="margin-right: 8px;">
+              Sonderzeichen entfernen: ( ) - _ + / , . ; : " '
+            </label>
+            <label style="display: block; margin-bottom: 6px; cursor: pointer;">
+              <input type="checkbox" id="removeNumbers" style="margin-right: 8px;">
+              Zahlen entfernen
+            </label>
+          </div>
+
+          <div style="margin-top: 15px;">
+            <button id="applyPreviewBtn" class="btn-confirm" style="width: 100%; padding: 12px; font-size: 16px;">Diese
+              Aufteilung verwenden</button>
+          </div>
+        </div>
+
+        <!-- ALTE OPTION: Automatische Vorschläge -->
         <div id="nameCorrectionOptions" style="margin: 20px 0;">
           <!-- Options will be populated by JavaScript -->
         </div>
